# anotai

./: .gitignore  LICENSE.txt  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: AutostartButton.tsx  Note.tsx  NoteBoard.tsx  Toast.tsx  UpdateChecker.tsx
app/context/: NotesContext.tsx
app/hooks/: useAutostart.ts  useLocalStorage.ts  useNotes.ts  useUpdateChecker.ts
app/lib/: note-window.ts
app/notes/: page.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
